<!--
 ~ Copyright 2019 Gluon
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~   http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.openjfx</groupId>
  <artifactId>javafx-maven-plugin</artifactId>
  <packaging>maven-plugin</packaging>
  <version>0.0.9-SNAPSHOT</version>
  <name>javafx-maven-plugin Maven Mojo</name>
  <description>The JavaFX Plugin is used to run JavaFX 23+ projects</description>
  <inceptionYear>2019</inceptionYear>

  <url>https://openjfx.io</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
    <javafx.version>23</javafx.version>
    <javadoc.plugin.version>3.10.0</javadoc.plugin.version>
    <gpg.plugin.version>3.2.7</gpg.plugin.version>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>3.6.0</version>
      <scope>provided</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugin-tools/maven-plugin-annotations -->
    <dependency>
      <groupId>org.apache.maven.plugin-tools</groupId>
      <artifactId>maven-plugin-annotations</artifactId>
      <version>3.6.0</version>
      <scope>provided</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-java -->
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-java</artifactId>
      <version>0.9.11</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-archiver -->
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-archiver</artifactId>
      <version>3.6.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>1.3</version>
    </dependency>

    <!--test-->
    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugin-testing/maven-plugin-testing-harness -->
    <dependency>
      <groupId>org.apache.maven.plugin-testing</groupId>
      <artifactId>maven-plugin-testing-harness</artifactId>
      <version>3.3.0</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-core -->
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-core</artifactId>
      <version>3.6.0</version>
        <scope>provided</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-compat -->
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-compat</artifactId>
      <version>3.6.0</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-aether-provider -->
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-aether-provider</artifactId>
      <version>3.3.9</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.eclipse.aether/aether-transport-http -->
    <dependency>
          <groupId>org.eclipse.aether</groupId>
          <artifactId>aether-transport-http</artifactId>
          <version>1.1.0</version>
          <scope>test</scope>
      </dependency>

    <!-- https://mvnrepository.com/artifact/org.eclipse.aether/aether-transport-file -->
    <dependency>
          <groupId>org.eclipse.aether</groupId>
          <artifactId>aether-transport-file</artifactId>
          <version>1.1.0</version>
          <scope>test</scope>
      </dependency>

    <!-- https://mvnrepository.com/artifact/org.eclipse.aether/aether-connector-basic -->
    <dependency>
          <groupId>org.eclipse.aether</groupId>
          <artifactId>aether-connector-basic</artifactId>
          <version>1.1.0</version>
          <scope>test</scope>
      </dependency>

    <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-interpolation -->
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-interpolation</artifactId>
      <version>1.25</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.24.5</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/junit/junit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-plugin-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-plugin-plugin</artifactId>
        <version>3.15.0</version>
      </plugin>

      <!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.7</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>

      <build>
        <plugins>
          <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${javadoc.plugin.version}</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <source>23</source>
            </configuration>
          </plugin>

          <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${gpg.plugin.version}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <!-- This is necessary for gpg to not try to use the pinentry programs -->
                  <!-- Only required for GPG >= 2.2 -->
                  <!--
                  <gpgArguments>
                    <arg>&#45;&#45;pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                  -->
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <organization>
    <name>Gluon</name>
    <url>https://www.gluonhq.com</url>
  </organization>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/openjfx/javafx-maven-plugin/issues</url>
  </issueManagement>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Abhinay Agarwal</name>
      <email>abhinay.agarwal@gluonhq.com</email>
      <organization>Gluon</organization>
      <organizationUrl>https://www.gluonhq.com</organizationUrl>
    </developer>

    <developer>
      <name>José Pereda</name>
      <email>jose.pereda@gluonhq.com</email>
      <organization>Gluon</organization>
      <organizationUrl>https://www.gluonhq.com</organizationUrl>
    </developer>

    <developer>
      <id>themuzzleflare</id>
      <name>Paul Tavitian</name>
      <email>paul@tavitian.net.au</email>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/openjfx/javafx-maven-plugin</url>
    <connection>scm:git:git://github.com/openjfx/javafx-maven-plugin.git</connection>
    <developerConnection>scm:git:ssh://git@github.com:openjfx/javafx-maven-plugin.git</developerConnection>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

</project>
